boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_class_handles_and_associated_callables.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: rendered
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_engine(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_engine_new(value: Int): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_version(): Int
    @JvmStatic external fun boltffi_method_class_demo_engine_value(`receiver`: Long): Int
    @JvmStatic external fun boltffi_method_class_demo_engine_swap(`receiver`: Long, other: Long): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_maybe_swap(`receiver`: Long, other: Long): Long
}

class Engine internal constructor(private val __boltffi_handle: java.util.concurrent.atomic.AtomicLong) : AutoCloseable {

    override fun close() {
        val handle = __boltffi_handle.getAndSet(0L)
        if (handle != 0L) {
            Native.boltffi_release_class_demo_engine(handle)
        }
    }

    internal fun __boltffiTakeHandle(): Long {
        val handle = __boltffi_handle.getAndSet(0L)
        check(handle != 0L) { "Engine is closed" }
        return handle
    }

    internal fun boltffiHandle(): Long {
        val handle = __boltffi_handle.get()
        check(handle != 0L) { "Engine is closed" }
        return handle
    }

    constructor(value: Int) : this(new(value).__boltffi_handle)

    companion object {
        private fun new(value: Int): Engine {
            return Engine(java.util.concurrent.atomic.AtomicLong(Native.boltffi_init_class_demo_engine_new(value)))
        }
        fun version(): UInt {
            return Native.boltffi_method_class_demo_engine_version().toUInt()
        }
    }

    fun value(): Int {
        return Native.boltffi_method_class_demo_engine_value(this.boltffiHandle())
    }

    fun swap(other: Engine): Engine {
        return Engine(java.util.concurrent.atomic.AtomicLong(({
    Native.ensureInitialized()
    var __boltffi_other_owned_handle = 0L
    var __boltffiEntered = false
    try {
        __boltffi_other_owned_handle = other.__boltffiTakeHandle()
        val __boltffiArgument0 = this.boltffiHandle()
        val __boltffiArgument1 = __boltffi_other_owned_handle
        __boltffiEntered = true
        Native.boltffi_method_class_demo_engine_swap(__boltffiArgument0, __boltffiArgument1)
    } catch (__boltffiFailure: UnsatisfiedLinkError) {
        __boltffiEntered = false
        throw __boltffiFailure
    } finally {
        if (!__boltffiEntered) {
            if (__boltffi_other_owned_handle != 0L) Native.boltffi_release_class_demo_engine(__boltffi_other_owned_handle)
        }
    }
})()))
    }

    fun maybeSwap(other: Engine?): Engine? {
        val __boltffi_handle = ({
    Native.ensureInitialized()
    var __boltffi_other_owned_handle = 0L
    var __boltffiEntered = false
    try {
        __boltffi_other_owned_handle = other?.__boltffiTakeHandle() ?: 0L
        val __boltffiArgument0 = this.boltffiHandle()
        val __boltffiArgument1 = __boltffi_other_owned_handle
        __boltffiEntered = true
        Native.boltffi_method_class_demo_engine_maybe_swap(__boltffiArgument0, __boltffiArgument1)
    } catch (__boltffiFailure: UnsatisfiedLinkError) {
        __boltffiEntered = false
        throw __boltffiFailure
    } finally {
        if (!__boltffiEntered) {
            if (__boltffi_other_owned_handle != 0L) Native.boltffi_release_class_demo_engine(__boltffi_other_owned_handle)
        }
    }
})()
        return if (__boltffi_handle == 0L) null else Engine(java.util.concurrent.atomic.AtomicLong(__boltffi_handle))
    }
}
