boltffi_backend/tests/kotlin/snapshots/kotlin__exports__kotlin_target_renders_companion_factory_style.snap
---
source: boltffi_backend/tests/kotlin/exports.rs
expression: "rendered_fixture_with_host(\"exports/kotlin_class_handles\", host)"
---
===== com/boltffi/demo/Demo.kt =====
@file:OptIn(kotlin.ExperimentalUnsignedTypes::class)

package com.boltffi.demo
@Suppress("FunctionName")
private object Native {
    @JvmStatic external fun boltffi_release_class_demo_engine(handle: Long): Unit
    @JvmStatic external fun boltffi_init_class_demo_engine_new(value: Int): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_version(): Int
    @JvmStatic external fun boltffi_method_class_demo_engine_value(`receiver`: Long): Int
    @JvmStatic external fun boltffi_method_class_demo_engine_swap(`receiver`: Long, other: Long): Long
    @JvmStatic external fun boltffi_method_class_demo_engine_maybe_swap(`receiver`: Long, other: Long): Long
}

class Engine internal constructor(internal val handle: Long) : AutoCloseable {
    private val __boltffi_calls = java.util.concurrent.atomic.AtomicLong(1L)
    private val __boltffi_closed = java.util.concurrent.atomic.AtomicBoolean(false)

    override fun close() {
        if (__boltffi_closed.compareAndSet(false, true)) {
            boltffiRelease()
        }
    }

    internal fun __boltffiTakeHandle(): Long {
        check(__boltffi_closed.compareAndSet(false, true)) { "Engine is closed" }
        if (!__boltffi_calls.compareAndSet(1L, 0L)) {
            boltffiRelease()
            throw IllegalStateException("Engine was passed by value while a call on it was still in flight; it has been closed")
        }
        return handle
    }

    internal fun boltffiHandle(): Long {
        check(!__boltffi_closed.get()) { "Engine is closed" }
        return handle
    }

    internal fun boltffiRetain(): Long {
        while (true) {
            check(!__boltffi_closed.get()) { "Engine is closed" }
            val calls = __boltffi_calls.get()
            check(calls != 0L) { "Engine is closed" }
            if (__boltffi_calls.compareAndSet(calls, calls + 1L)) return handle
        }
    }

    internal fun boltffiRelease() {
        if (__boltffi_calls.decrementAndGet() == 0L) {
            Native.boltffi_release_class_demo_engine(handle)
        }
    }

    companion object {
        fun new(value: Int): Engine {
            return Engine(Native.boltffi_init_class_demo_engine_new(value))
        }
        fun version(): UInt {
            return Native.boltffi_method_class_demo_engine_version().toUInt()
        }
    }

    fun value(): Int {
        val __boltffi_receiver = boltffiRetain()
        try {
            return Native.boltffi_method_class_demo_engine_value(__boltffi_receiver)
        } finally {
            boltffiRelease()
        }
    }

    fun swap(other: Engine): Engine {
        val __boltffi_receiver = boltffiRetain()
        try {
            return Engine(({
    Native.ensureInitialized()
    var __boltffi_other_owned_handle = 0L
    var __boltffiEntered = false
    try {
        __boltffi_other_owned_handle = other.__boltffiTakeHandle()
        val __boltffiArgument0 = __boltffi_receiver
        val __boltffiArgument1 = __boltffi_other_owned_handle
        __boltffiEntered = true
        Native.boltffi_method_class_demo_engine_swap(__boltffiArgument0, __boltffiArgument1)
    } catch (__boltffiFailure: UnsatisfiedLinkError) {
        __boltffiEntered = false
        throw __boltffiFailure
    } finally {
        if (!__boltffiEntered) {
            if (__boltffi_other_owned_handle != 0L) Native.boltffi_release_class_demo_engine(__boltffi_other_owned_handle)
        }
    }
})())
        } finally {
            boltffiRelease()
        }
    }

    fun maybeSwap(other: Engine?): Engine? {
        val __boltffi_receiver = boltffiRetain()
        try {
            val __boltffi_handle = ({
    Native.ensureInitialized()
    var __boltffi_other_owned_handle = 0L
    var __boltffiEntered = false
    try {
        __boltffi_other_owned_handle = other?.__boltffiTakeHandle() ?: 0L
        val __boltffiArgument0 = __boltffi_receiver
        val __boltffiArgument1 = __boltffi_other_owned_handle
        __boltffiEntered = true
        Native.boltffi_method_class_demo_engine_maybe_swap(__boltffiArgument0, __boltffiArgument1)
    } catch (__boltffiFailure: UnsatisfiedLinkError) {
        __boltffiEntered = false
        throw __boltffiFailure
    } finally {
        if (!__boltffiEntered) {
            if (__boltffi_other_owned_handle != 0L) Native.boltffi_release_class_demo_engine(__boltffi_other_owned_handle)
        }
    }
})()
            return if (__boltffi_handle == 0L) null else Engine(__boltffi_handle)
        } finally {
            boltffiRelease()
        }
    }
}
